--- a/join.html
+++ b/join.html
@@ -14,9 +14,10 @@ description:
     <h2 style="font-size: 2.0em; text-align: left;">Joining BEAM is the perfect way to share your love for science
       and engineering with the local community!
     </h2>
-    <p><a href="#app">We accept mentor applications at the beginning of each semester.</a> Follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> or enter your email below for updates regarding our
-      Spring 2020 Info Session.</p>
+   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>  -->
+    <p><strong>Spring 2020 applications are now closed</strong> but feel free to add 
+      your email below or follow us on <a target=_blank
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2020 infosession/application.</p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
@@ -171,7 +172,7 @@ description:
     </p>
   </div>
 </div>
-<div
+<!-- <div
   style="background-color:#f2f2f2; padding-top: 5vh; text-align: center; width:100vw; margin-left: -50vw; left:50%; position:relative;">
   <div style="width:75%; padding-bottom: 5vh; display:inline-block">
     <a name="app"></a>
@@ -182,12 +183,13 @@ description:
         info session
         on Monday, February 3rd. If you are unable to attend, please contact us ASAP and we will try to make
         accommodations to the best of our abilities. </b></p>
-    <p style="text-align: left; ">1. What is motivating you to join BEAM? What do you aim to get out of your experience with us? <br><br>
+    <p style="text-align: left; ">1. What is motivating you to join BEAM? What do you aim to get out of your experience
+      with us? <br><br>
       2. Choose a scientific concept or topic. How would you explain it in a way that a K-8 school student could
       understand?<br><br>
       3. Name the top two qualities you believe great mentors should possess and discuss how you have demonstrated these
       qualities in previous experiences.<br><br>
       4. If your students seem disinterested and/or detached during a lesson, how would you engage them?
-    </p >
+    </p>
   </div>
-</div>
+</div> -->
