comment out timeline

--- a/calendar.html
+++ b/calendar.html
@@ -102,6 +102,8 @@ description: In addition to visiting our local elementary and middle schools wee
 
 </div>
 
+<!-- 
+
 <div style="padding-bottom: 1%;"></div>
 
 
@@ -124,9 +126,9 @@ description: In addition to visiting our local elementary and middle schools wee
               <span>{{item.title}}</span>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+<!--         <div class="swiper-pagination"></div>
       </div>
     </div>
   </div>
@@ -134,4 +136,4 @@ description: In addition to visiting our local elementary and middle schools wee
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script>
 
-<script src='../timeline.js'></script>
+<script src='../timeline.js'></script> -->
