--- a/calendar.html
+++ b/calendar.html
@@ -4,92 +4,12 @@ heading:
 description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughout our community. Check out some highlights from our previous events below, and stay posted to see what events we will be participating in this semester!
 ---
 <title> Events </title>
+
 <head>
-  
+
 </head>
 
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
 
-<style>
-  #app {
-    padding: 50px 0;
-  }
-
-  .timeline {
-    margin: 50px 0;
-    list-style-type: none;
-    display: flex;
-    padding: 0;
-    text-align: center;
-  }
-
-  .timeline li {
-    transition: all 200ms ease-in;
-  }
-
-  .timestamp {
-    width: 200px;
-    margin-bottom: 20px;
-    padding: 0px 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-weight: 100;
-  }
-
-  .status {
-    padding: 0px 40px;
-    display: flex;
-    justify-content: center;
-    border-top: 4px solid #3e70ff;
-    position: relative;
-    transition: all 200ms ease-in;
-  }
-
-  .status span {
-    font-weight: 600;
-    padding-top: 20px;
-  }
-
-  .status span:before {
-    content: '';
-    width: 25px;
-    height: 25px;
-    background-color: #e8eeff;
-    border-radius: 25px;
-    border: 4px solid #3e70ff;
-    position: absolute;
-    top: -15px;
-    left: 42%;
-    transition: all 200ms ease-in;
-  }
-
-  .swiper-control {
-    text-align: right;
-  }
-
-  .swiper-container {
-    width: 100%;
-    height: 250px;
-    margin: 50px 0;
-    overflow: hidden;
-    padding: 0 20px 30px 20px;
-  }
-
-  .swiper-slide {
-    width: 200px;
-    text-align: center;
-    font-size: 18px;
-  }
-
-  .swiper-slide:nth-child(2n) {
-    width: 40%;
-  }
-
-  .swiper-slide:nth-child(3n) {
-    width: 20%;
-  }
-</style>
 
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
 <div class="slideshow">
@@ -102,38 +22,77 @@ description: In addition to visiting our local elementary and middle schools wee
 
 </div>
 
-
-
 <div style="padding-bottom: 1%;"></div>
 
+<ul class="timeline">
 
-<!-- 
+	<!-- Item 1 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Splash</span>
+				<span class="time-wrapper"><span class="time">Sun 3/08</span></span>
+			</div>
+			<div class="desc">2-3 PM</div>
+		</div>
+	</li>
+  
+	<!-- Item 2 -->
+	<li>
+		<div class="direction-l">
+			<div class="flag-wrapper">
+				<span class="flag">Mini U</span>
+				<span class="time-wrapper"><span class="time">Mon 3/09</span></span>
+			</div>
+			<div class="desc">10:30-12:30pm</div>
+		</div>
+  </li>
+  <li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Science Night</span>
+				<span class="time-wrapper"><span class="time">Wed 3/18</span></span>
+			</div>
+			<div class="desc">4:30-7:30pm</div>
+		</div>
+	</li>
 
-<div id="app" class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="swiper-container">
-        <p class="swiper-control">
-          <button type="button" class="btn btn-default btn-sm prev-slide">Prev</button>
-          <button type="button" class="btn btn-default btn-sm next-slide">Next</button>
-        </p>
-        <div class="swiper-wrapper timeline">
-          <div class="swiper-slide" v-for="item in steps">
-            <div class="timestamp">
-              <span class="date">{{item.dateLabel}}<span>
-            </div>
-            <div class="status">
-              <span>{{item.title}}</span>
-            </div>
-          </div>
-        </div> -->
-        <!-- Add Pagination -->
-<!--         <div class="swiper-pagination"></div>
-      </div>
-    </div>
-  </div>
-</div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script>
-
-<script src='../timeline.js'></script> -->
+	<!-- Item 3 -->
+	<li>
+		<div class="direction-l">
+			<div class="flag-wrapper">
+				<span class="flag">Bats @ Zoo</span>
+				<span class="time-wrapper"><span class="time">TBA</span></span>
+			</div>
+			<div class="desc">TBA</div>
+		</div>
+  </li>
+  <li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Berkeley Project</span>
+				<span class="time-wrapper"><span class="time">Sat 4/11</span></span>
+			</div>
+			<div class="desc">Deadline to register is March 12!</div>
+		</div>
+  </li>
+  <li>
+		<div class="direction-l">
+			<div class="flag-wrapper">
+				<span class="flag">Maker Faire</span>
+				<span class="time-wrapper"><span class="time">Thurs 4/16</span></span>
+			</div>
+			<div class="desc">5-7 PM</div>
+		</div>
+  </li>
+  <li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Cal Day </span>
+				<span class="time-wrapper"><span class="time">Sat 4/18</span></span>
+			</div>
+			<div class="desc">9 AM - 4 PM</div>
+		</div>
+	</li>
+  
+</ul>
