--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,8 @@ description: In addition to visiting our local elementary and middle schools wee
 <title> Events </title>
 
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
 
 <style>
 
@@ -89,6 +91,31 @@ description: In addition to visiting our local elementary and middle schools wee
 }
 </style>
 
+<div id="app" class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="swiper-container">
+        <p class="swiper-control">
+          <button type="button" class="btn btn-default btn-sm prev-slide">Prev</button>
+          <button type="button" class="btn btn-default btn-sm next-slide">Next</button>
+        </p>
+        <div class="swiper-wrapper timeline">
+          <div class="swiper-slide" v-for="item in steps">
+            <div class="timestamp">
+              <span class="date">[[item.dateLabel]]<span>
+            </div>
+            <div class="status">
+              <span>[[item.title]]</span>
+            </div>
+          </div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
 <div  class="slideshow">
   <div class="slide1"><img class="slide-image" src="../images/slideshow/1.jpg"></div>
@@ -103,48 +130,19 @@ description: In addition to visiting our local elementary and middle schools wee
 <div style = "padding-bottom: 1%;"></div>
 
 
-<div id="app" class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="swiper-container">
-        <p class="swiper-control">
-          <button type="button" class="btn btn-default btn-sm prev-slide">Prev</button>
-          <button type="button" class="btn btn-default btn-sm next-slide">Next</button>
-        </p>
-        <div class="swiper-wrapper timeline">
-          <div class="swiper-slide" v-for="item in steps">
-            <div class="timestamp">
-              <span class="date">{{item.dateLabel}}<span>
-            </div>
-            <div class="status">
-              <span>{{item.title}}</span>
-            </div>
-          </div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-      </div>
-    </div>
-  </div>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
-
-
-
-
 <script>
   const data = [
-  { dateLabel: 'January 2017', title: 'Gathering Information' },
-  { dateLabel: 'February 2017', title: 'Planning' },
-  { dateLabel: 'March 2017', title: 'Design' },
-  { dateLabel: 'April 2017', title: 'Content Writing and Assembly' },
-  { dateLabel: 'May 2017', title: 'Coding' },
-  { dateLabel: 'June 2017', title: 'Testing, Review & Launch' },
-  { dateLabel: 'July 2017', title: 'Maintenance' }
+  { dateLabel: 'Sun 3/08', title: 'Splash' },
+  { dateLabel: 'Mon 3/09', title: 'Mini U' },
+  { dateLabel: 'Wed 3/18', title: 'Science Night' },
+  { dateLabel: 'TBA', title: 'Bats @ Zoo' },
+  { dateLabel: 'Sat 4/11', title: 'Berkeley Project' },
+  { dateLabel: 'Thu 4/16', title: 'Maker Faire' },
+  { dateLabel: 'Sat 4/18', title: 'Cal Day' }
 ];
 
 new Vue({
+  delimiters : ['[[',']]'],
   el: '#app',
   data: {
     steps: data,
