updated actual funds allocation on donate page

--- a/donate.html
+++ b/donate.html
@@ -44,8 +44,10 @@ description:
         },
         data: {
             columns: [
-                ['Briana\'s Parking Tickets', 248.4],
-                ['Everything Else', 111.6]
+              ['Lesson Materials', 130.68],
+              ['Transportation to Site', 156.24],
+              ['Recruitment and Orientation', 55.8],
+              ['Other Expenses', 17.28]
             ],
             type : 'donut',
             onclick: function (d, i) { console.log("onclick", d, i); },
