added images to about page and slideshow, changed timeline color to match navbar, fixed greybox spacing issues

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ description:
 
 
 
-<section id="Mission" class="tabcontent">
+<section id="Mission" class="tabcontent" style = "padding-right: 11%; padding-left: 10%;">
 
     <div id="statement">
         <div>
@@ -75,7 +75,7 @@ description:
         </div>
         <div class="mission-photos">
             <img class="mp1" src="../images/mission1.jpg">
-            <img class="mp2" src="../images/mission2.png">
+            <img class="mp2" src="../images/hes/hes1.jpg">
         </div>
     </div>
     <div id="news">
