--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@ description:
 <title> Donate </title>
 
 
-<section style="padding-top: 90px; display: flex;">
+<section style="padding-top: 90px; display: flex; padding-right: 7%; padding-left: 10%;">
     <div class="content" style="width: 60%; padding-right: 8%;">
         <h2 style="font-size: 2.250em; text-align: left;">Donate</h2>
         <p>You can help empower K-8 students across the Berkeley and Oakland area today with a donation to BEAM. Your
