--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@ description: Berkeley Engineers and Mentors
 	</div>
 
 </div>
-
-
-<div class="content" style="flex-direction: row;">
+	
+	<div class="content" style="flex-direction: row; padding-right: 8%; padding-left: 10%;">
 	<a name="target"></a>
 	<section>
 		<div class="container flex">
