--- a/lessons.html
+++ b/lessons.html
@@ -19,23 +19,31 @@ description: Each of our lessons is custom-designed by one of our staff members 
     
     <script language="JavaScript">
       var lessons = [
-        ["a_handful_of_fun", "A Handful of Fun", "Show a handful of applications of bioengineering and prostheses.", "anatomy"],
+        ["a_handful_of_fun", "A Handful of Fun", "A handful of applications of bioengineering and prostheses.", "anatomy"],
         ["oh_buoy", "Oh Buoy!", "Use hands-on demos and modules to give students a deep understanding of density.", "physics"],
         ["we_belung_together", "We Be-Lung Together", "Learn about the lungs and the importance of our respiratory system.", "anatomy"],
         ["feeling_eggsellent", "Feeling Eggsellent", "Introduce students to the concepts of force and impact.", "physics"],
         ["watts_up", "Watt's Up?", "Create circuits, explore electricity, and build your own robot.", "physics"],
         ["rollercoasters", "Marble Rollercoasters", "Introduce the concepts of potential and kinetic energy.", "physics"],
         ["bottle_rockets", "Bottle Rockets", "Introduce students to the fundamentals of rockets and propulsion.", "physics"],
-        ["catapults", "Marshmallow Catapults", "Learn about simple kinematics and projectile motion.", "physics"],
-        ["genetics", "Genetics", "Infer the existence and role of DNA before extracting it from a strawberry.", "biology"],
+        ["catapults", "Catapulting into BEAM", "Learn about simple kinematics and projectile motion.", "physics"],
+        ["genetics", "Genetics", "Discover the existence and role of DNA before extracting it from a strawberry.", "biology"],
         ["artery", "BioE: Clogged Arteries", "Learn about the cardiovascular system by designing a solution to a clogged artery.", "anatomy"],
         ["heart", "BioE: Heart Valves", "Continue with biomedicine by dissecting sheep hearts and treating heart valves.", "anatomy"],
         ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
         ["angular_momentum", "Angular Momentum", "Experiment with rotating objects to learn momentum, friction, and precession.", "physics"],
         ["digestion", "Digestion", "Follow the digestive system by focusing on the mouth, stomach, and intestines.", "anatomy"],
-        ["earthquakes", "Earthquakes", "Explore the challenges of building earthquake-proof structures.", "misc"]
+        ["earthquakes", "Earthquakes", "Explore the challenges of building earthquake-proof structures.", "misc"],
+        ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
+        ["snap_out_of_it", "Snap Out of It", "A quick introduction to the fundamental ideas and concepts of computer science.", "misc"],
+        ["big_beam_energy", "Big Beam Energy", "Explore several forms of renewable energy.", "misc"]
         //["marine_science", "Marine Science", "Dive into oceanic physics, ecology, and conservation."]
       ];
+
+      // Sorts lessons in alphabetical order by title
+      lessons.sort(function(a,b) {
+        return a[1].localeCompare(b[1]);
+      })
 
       html = "";
       for (var i = 0; i < lessons.length; i++) {
@@ -51,7 +59,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
         html += '<div class="caption">';
 
         // All images used here are royalty-free stock photos.
-        html += '<img class="lessonImage" src="/images/' + lessons[i][0] + '.png" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
+        html += '<img class="lessonImage" src="/images/lessons/' + lessons[i][0] + '.jpg" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
         html += '<h3>' + lessons[i][1] + '</h3>';
         html += '<p>' + lessons[i][2] + '</p>';
         html += '</div>';
@@ -120,12 +128,23 @@ document.getElementById("start").click();
   <div class="lesson-container" id="final-lesson-container">
 
     <script>
+
+
       var lessons = [
-        ["all_about_the_solar_system", "All About the Solar System", "Oxford B: A fun introduction to astronomy and physics, with a focus on satellite and spaceship design."],
-        ["the_cardiovascular_system", "The Ins and Outs Cardiovascular System", "Emerson: Learn about the various components of the cardiovascular system."],
-        ["climate_change", "Climate Change -- Watery Going to Do?", "Eres A: Combat climate change with resource management and sustainable energy."]
+        ["a_scientific_feast", "A Scientific Feast", "Maynard A (Fall 2019)", "Take a sneak peek into the world of molecular gastronomy and learn how certain foods are made."],
+        ["all_about_the_solar_system", "All About the Solar System", "Oxford B (Fall 2018)", "A fun introduction to astronomy and physics, with a focus on satellite and spaceship design."],
+        ["climate_change", "Climate Change -- Watery Going to Do?", "Eres A (Fall 2018)", "Combat climate change with resource management and sustainable energy."],
+        ["how_to_make_people_pill_better", "How to Make People Pill Better", "Thousand Oaks A (Fall 2019)", "Explore the conditions that influence and affect the design and development of medicine"],
+        ["please_date_me", "Please Date Me", "Washington (Fall 2019)", "Discover techinques that paleontologists use to understand the history of life on Earth."],
+        ["the_cardiovascular_system", "The Ins and Outs of the Cardiovascular System", "Emerson (Fall 2018)", "Learn about the various components of the cardiovascular system."]
         //["shake_it_up", "Shake It Up!", "Longfellow B: Learn about the engineering behind earthquake damage prevention."]
       ];
+
+      // Sorts lessons in alphabetical order by title
+      lessons.sort(function(a,b) {
+        return a[1].localeCompare(b[1]);
+      })
+
 
       html = "";
       for (var i = 0; i < lessons.length; i++) {
@@ -140,9 +159,10 @@ document.getElementById("start").click();
         }
         html += '<div class="caption">';
         // All images used here are royalty-free stock photos.
-        html += '<img class="lessonImage" src="/images/' + lessons[i][0] + '.png" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
+        html += '<img class="lessonImage" src="/images/lessons/' + lessons[i][0] + '.jpg" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
         html += '<h3>' + lessons[i][1] + '</h3>';
-        html += '<p>' + lessons[i][2] + '</p>';
+        html += '<i>' + lessons[i][2] + '</i>';
+        html += '<p>' + lessons[i][3] + '</p>';
 
         html += '</div>';
         html += '<button style = "position: absolute; bottom: 0;" onclick = "window.open(' + "'../lessons_archive/featured_final_lessons/" + lessons[i][0] + ".pdf'," + "'_blank')" + "\"" + 'class="custom-button"><span style= "font-size: .8em; font-weight: normal;">View</span></button></div>';
