--- a/lessons.html
+++ b/lessons.html
@@ -22,18 +22,18 @@ description: Each of our lessons is custom-designed by one of our staff members 
         ["a_handful_of_fun", "A Handful of Fun", "A handful of applications of bioengineering and prostheses.", "anatomy"],
         ["oh_buoy", "Oh Buoy!", "Use hands-on demos and modules to give students a deep understanding of density.", "physics"],
         ["we_belung_together", "We Be-Lung Together", "Learn about the lungs and the importance of our respiratory system.", "anatomy"],
-        ["feeling_eggsellent", "Feeling Eggsellent", "Introduce students to the concepts of force and impact.", "physics"],
+        ["drop_it_like_its_hot", "Drop It Like It's Hot", "Introduce students to the concepts of force and impact.", "physics"],
         ["watts_up", "Watt's Up?", "Create circuits, explore electricity, and build your own robot.", "physics"],
         ["rollercoasters", "Marble Rollercoasters", "Introduce the concepts of potential and kinetic energy.", "physics"],
-        ["bottle_rockets", "Bottle Rockets", "Introduce students to the fundamentals of rockets and propulsion.", "physics"],
+        ["blast_off_with_beam", "Blast off With BEAM", "Introduce students to the fundamentals of rockets and propulsion.", "physics"],
         ["catapults", "Catapulting into BEAM", "Learn about simple kinematics and projectile motion.", "physics"],
-        ["genetics", "Genetics", "Discover the existence and role of DNA before extracting it from a strawberry.", "biology"],
-        ["artery", "BioE: Clogged Arteries", "Learn about the cardiovascular system by designing a solution to a clogged artery.", "anatomy"],
-        ["heart", "BioE: Heart Valves", "Continue with biomedicine by dissecting sheep hearts and treating heart valves.", "anatomy"],
+        ["blue_gene_baby", "Blue Gene Baby", "Explore the topics of genetics and DNA.", "biology"],
+        ["get_pumped", "Get Pumped!", "Discover the crossover between physics and biology in the cardiovascular system.", "anatomy"],
+        ["i_heart_beam", "I Heart BEAM", "Learn about the cardiovascular system, and build your own heart valve!", "anatomy"],
         ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
         ["angular_momentum", "Angular Momentum", "Experiment with rotating objects to learn momentum, friction, and precession.", "physics"],
-        ["digestion", "Digestion", "Follow the digestive system by focusing on the mouth, stomach, and intestines.", "anatomy"],
-        ["earthquakes", "Earthquakes", "Explore the challenges of building earthquake-proof structures.", "misc"],
+        ["miraculin", "When Life Gives You Lemons...", "Explore the science behind taste.", "anatomy"],
+        ["its_not_my_fault", "It’s Not my Fault!", "Explore the challenges of building earthquake-proof structures.", "misc"],
         ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
         ["snap_out_of_it", "Snap Out of It", "A quick introduction to the fundamental ideas and concepts of computer science.", "misc"],
         ["big_beam_energy", "Big Beam Energy", "Explore several forms of renewable energy.", "misc"]
