--- a/lessons.html
+++ b/lessons.html
@@ -16,7 +16,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
 
 <div id="lessons">
   <div class="lesson-container" id="lesson-container">
-    
+
     <script language="JavaScript">
       var lessons = [
         ["a_handful_of_fun", "A Handful of Fun", "A handful of applications of bioengineering and prostheses.", "anatomy"],
@@ -31,7 +31,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
         ["get_pumped", "Get Pumped!", "Discover the crossover between physics and biology in the cardiovascular system.", "anatomy"],
         ["i_heart_beam", "I Heart BEAM", "Learn about the cardiovascular system, and build your own heart valve!", "anatomy"],
         ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
-        ["angular_momentum", "Angular Momentum", "Experiment with rotating objects to learn momentum, friction, and precession.", "physics"],
+        ["sugar_rush", "Sugar Rush", "Spend some time exploring how sweet nutrition can be!", "anatomy"],
         ["miraculin", "When Life Gives You Lemons...", "Explore the science behind taste.", "anatomy"],
         ["its_not_my_fault", "It’s Not my Fault!", "Explore the challenges of building earthquake-proof structures.", "misc"],
         ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
