--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Follow us on Facebook for updates—application
-					information will be available at our Spring 2020 Info Session!</p>
+					information will be available at our Fall 2020 Info Session!</p>
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
 							More
