adding infosession image + some info on the join page

--- a/join.html
+++ b/join.html
@@ -18,9 +18,9 @@ description:
     <!-- <p><strong>Spring 2020 applications are now closed</strong> but feel free to add 
       your email below or follow us on <a target=_blank
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2020 infosession/application.</p> -->
-        <p>For interested <strong>Fall 2020 mentors</strong>, attend our virtual info-session on <strong>September 8th</strong> for application information! 
+        <p>For interested <strong>Fall 2020 mentors</strong>, stop by during Calapalooza on <strong> September 2nd from 4 PM - 6 PM PST</strong>, as well as our virtual info-session on <strong>September 8th from 8 PM - 9 PM PST</strong> for application information! 
           More details are available on our <a target=_blank
-            href="https://www.facebook.com/beam.teach/">Facebook</a> page. Follow us or add your email below to stay updated!</p>
+            href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email below to stay updated!</p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
