adding infosession details to home page

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ description: Berkeley Engineers and Mentors
 		<div class="container flex">
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
-				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Follow us on Facebook for updates—application
-					information will be available at our Fall 2020 Info Session!</p>
+				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Fall 2020 Application can be found <a href="https://forms.gle/TG8VNeupUvKH69aH7">here</a>, 
+				and be sure to check out our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
 							More
