added current category

--- a/lessons.html
+++ b/lessons.html
@@ -7,7 +7,8 @@ description: Each of our lessons is custom-designed by one of our staff members 
 <title> Lessons </title>
 
 <div id="categoryButtonContainer">
-  <button id = "start" class="btn" onclick="filterSelection('all')"> All</button>
+  <button id = "start" class="btn" onclick="filterSelection('all')">All</button>
+  <button class = "btn" onclick="filterSelection('current')">Current</button>
   <button class="btn" onclick="filterSelection('physics')">Physics</button>
   <button class="btn" onclick="filterSelection('chemistry')">Chemistry</button>
   <button class="btn" onclick="filterSelection('biology')">Biology</button>
