--- a/donate.html
+++ b/donate.html
@@ -76,6 +76,12 @@ description:
     });
     </script>
     <!-- <img style="width: 26.6vw; height: 20vw;" src="/images/bottle-rocket.jpg"> -->
+</section>
 
-
+<!-- feel free to use inline styling now, but we should move this to an external css sheet at some point.-->
+<section style="background-color: #f2f2f2; width: 100vw; margin-left: calc(-50vw + 50%);">
+    <div style="width: 60%; padding-right:8%; padding-left:8%; margin:auto; padding-top:5%;">
+        <h2> Our Donors </h2>
+        <p style="text-align: center;">Special thanks to our donors from our Fall 2020 campaign for their generosity and continued support!</p> 
+    </div>
 </section>
