updates for sp21 infosessions

--- a/join.html
+++ b/join.html
@@ -17,10 +17,16 @@ description:
    <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>  -->
     <!-- <p><strong>Spring 2020 applications are now closed</strong> but feel free to add 
       your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2020 infosession/application.</p> -->
-        <p>For interested <strong>Fall 2020 mentors</strong>, stop by during Calapalooza on <strong> September 2nd from 4 PM - 6 PM PST</strong>, as well as our virtual info-session on <strong>September 8th from 8 PM - 9 PM PST</strong> for application information! 
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2021 infosession/application.</p> -->
+        <p>For interested <strong>Spring 2021 mentors</strong>, stop by at the following events for application information!
           More details are available on our <a target=_blank
-            href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email below to stay updated!</p>
+            href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!</p>
+
+        <p>
+          <strong>January 25 from 5-7 PM PST</strong> <br>Calapalooza <br><a target=_blank href="https://berkeley.zoom.us/j/9364034367">https://berkeley.zoom.us/j/9364034367</a><br><br>
+          <strong>January 29 from 7-8 PM PST</strong> <br>Berkeley Education Clubs Infosession <br><a target=_blank href="https://www.facebook.com/events/798488734036190">https://www.facebook.com/events/798488734036190</a><br><br>
+          <strong>February 1st from 7-8 PM PST</strong> <br>BEAM Infosession <br><a target=_blank href="https://www.facebook.com/events/161068278857651">https://www.facebook.com/events/161068278857651</a>
+        </p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
@@ -49,7 +55,7 @@ description:
 
 
 </section>
-<h2>Watch our Infosession!</h2>
+<h2>Watch our Fall Infosession!</h2>
 <div style="text-align: center; margin-bottom: 50px;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uSbi-NqTV1I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
