--- a/join.html
+++ b/join.html
@@ -18,9 +18,12 @@ description:
     <!-- <p><strong>Spring 2020 applications are now closed</strong> but feel free to add 
       your email below or follow us on <a target=_blank
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2021 infosession/application.</p> -->
+
         <p>For interested <strong>Spring 2021 mentors</strong>, stop by at the following events for application information!
           More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!</p>
+
+        <p>BEAM Spring 2021 Application: <a target=_blank href="https://forms.gle/G3fPVjXzT7iGcjt29">https://forms.gle/G3fPVjXzT7iGcjt29</a></p>
 
         <p>
           <strong>January 25 from 5-7 PM PST</strong> <br>Calapalooza <br><a target=_blank href="https://berkeley.zoom.us/j/9364034367">https://berkeley.zoom.us/j/9364034367</a><br><br>
