--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ description: Berkeley Engineers and Mentors
 				<!-- <p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2021 Application will be published after our <a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>;
 				in the meantime, be sure to check out our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
 
-				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2021 Application can be found <a target=_blannk href="https://forms.gle/G3fPVjXzT7iGcjt29">here</a>, 
+				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2021 Application can be found <a target=_blank href="https://forms.gle/G3fPVjXzT7iGcjt29">here</a>, 
 					and be sure to check out our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
 
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
